# conditional-inline

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt
src/conditional-inline/: cond_inline.hpp  inlinee_begin.hpp  inlinee_end.hpp  inliner.hpp
src/lib/conditional-inline/: cond_inline.hpp  inlinee_begin.hpp  inlinee_end.hpp  inliner.hpp
test_project/consumers/lib/lib_inlined/: inlined_a.cpp  inlined_a.hpp  inlined_b.cpp  inlined_b.hpp
test_project/consumers/lib/lib_inlined_a/: inlined_a.cpp
test_project/consumers/lib/lib_inlined_b/: inlined_b.cpp
test_project/consumers/lib/lib_not_inlined/: not_inlined_b.cpp  not_inlined_b.hpp
test_project/provider/lib/lib_test_project/: class_definition.hpp  class_member_function_definitions.cpp  free_function_declaration.hpp  free_function_definition.cpp
test_project/test/test_lib_inlined/: test_inlined.cpp
test_project/test/test_lib_not_inlined/: test_not_inlined.cpp
